// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-popup #render should render component as expected (1) 1`] = `
<gux-popup>
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-target-container">
      <slot name="target"></slot>
      <div class="gux-popup-container gux-sr-only-clip" style="width: 0px; overflow: hidden; left: NaNpx; top: 2px;">
        <slot name="popup"></slot>
      </div>
    </div>
  </template>
  <gux-button slot="target">
    Target
  </gux-button>
  <gux-list slot="popup">
    <gux-list-item>
      Item 1
    </gux-list-item>
    <gux-list-item>
      Item 2
    </gux-list-item>
    <gux-list-item>
      Item 3
    </gux-list-item>
  </gux-list>
</gux-popup>
`;

exports[`gux-popup #render should render component as expected (2) 1`] = `
<gux-popup expanded="">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-target-container">
      <slot name="target"></slot>
      <div class="gux-expanded gux-popup-container">
        <slot name="popup"></slot>
      </div>
    </div>
  </template>
  <gux-button slot="target">
    Target
  </gux-button>
  <gux-list slot="popup">
    <gux-list-item>
      Item 1
    </gux-list-item>
    <gux-list-item>
      Item 2
    </gux-list-item>
    <gux-list-item>
      Item 3
    </gux-list-item>
  </gux-list>
</gux-popup>
`;

exports[`gux-popup #render should render component as expected (3) 1`] = `
<gux-popup disabled="">
  <template shadowrootmode="open">
    <div aria-disabled="true" class="gux-disabled gux-target-container">
      <slot name="target"></slot>
      <div class="gux-popup-container gux-sr-only-clip" style="width: 0px; overflow: hidden; left: NaNpx; top: 2px;">
        <slot name="popup"></slot>
      </div>
    </div>
  </template>
  <gux-button slot="target">
    Target
  </gux-button>
  <gux-list slot="popup">
    <gux-list-item>
      Item 1
    </gux-list-item>
    <gux-list-item>
      Item 2
    </gux-list-item>
    <gux-list-item>
      Item 3
    </gux-list-item>
  </gux-list>
</gux-popup>
`;

exports[`gux-popup #render should render component as expected (4) 1`] = `
<gux-popup disabled="" expanded="">
  <template shadowrootmode="open">
    <div aria-disabled="true" class="gux-disabled gux-target-container">
      <slot name="target"></slot>
      <div class="gux-popup-container">
        <slot name="popup"></slot>
      </div>
    </div>
  </template>
  <gux-button slot="target">
    Target
  </gux-button>
  <gux-list slot="popup">
    <gux-list-item>
      Item 1
    </gux-list-item>
    <gux-list-item>
      Item 2
    </gux-list-item>
    <gux-list-item>
      Item 3
    </gux-list-item>
  </gux-list>
</gux-popup>
`;
